@@ -14,15 +14,13 @@ import hudson.scm.RepositoryBrowser;
 import org.jenkinsci.plugins.p4.browsers.SwarmBrowser;
 import org.jenkinsci.plugins.p4.client.ConnectionHelper;
 import org.xml.sax.Attributes;
-import org.xml.sax.SAXException;
 import org.xml.sax.helpers.DefaultHandler;
 
 import javax.xml.parsers.SAXParser;
 import javax.xml.parsers.SAXParserFactory;
 import java.io.File;
-import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Stack;
@@ -42,10 +40,8 @@ public class P4ChangeParser extends ChangeLogParser {
 		this.credential = credential;
 	}
 
-	@SuppressWarnings("rawtypes")
 	@Override
-	public ChangeLogSet<? extends Entry> parse(Run run, RepositoryBrowser<?> browser, File file)
-			throws IOException, SAXException {
+	public ChangeLogSet<? extends Entry> parse(Run run, RepositoryBrowser<?> browser, File file) {
 		try (ConnectionHelper p4 = new ConnectionHelper(run, credential, null)) {
 			SAXParserFactory factory = SAXParserFactory.newInstance();
 			factory.setFeature("http://xml.org/sax/features/external-general-entities", false);
@@ -63,7 +59,7 @@ public class P4ChangeParser extends ChangeLogParser {
 	}
 
 	public static class ChangeLogHandler extends DefaultHandler {
-		private Stack<P4ChangeEntry> objects = new Stack<P4ChangeEntry>();
+		private Stack<P4ChangeEntry> objects = new Stack<>();
 		private StringBuffer text = new StringBuffer();
 
 		private List<P4ChangeEntry> changeEntries;
@@ -93,23 +89,22 @@ public class P4ChangeParser extends ChangeLogParser {
 		}
 
 		@Override
-		public void characters(char[] ch, int start, int length) throws SAXException {
+		public void characters(char[] ch, int start, int length) {
 			text.append(ch, start, length);
 		}
 
 		@Override
-		public void startDocument() throws SAXException {
-			changeEntries = new ArrayList<P4ChangeEntry>();
+		public void startDocument() {
+			changeEntries = new ArrayList<>();
 			changeSet = new P4ChangeSet(run, browser, changeEntries);
 		}
 
 		@Override
-		public void endDocument() throws SAXException {
+		public void endDocument() {
 		}
 
 		@Override
-		public void startElement(String uri, String localName, String qName, Attributes attributes)
-				throws SAXException {
+		public void startElement(String uri, String localName, String qName, Attributes attributes) {
 
 			if (qName.equalsIgnoreCase("changelog")) {
 				// this is the root, so don't do anything
@@ -122,41 +117,37 @@ public class P4ChangeParser extends ChangeLogParser {
 				return;
 			}
 			if (objects.peek() instanceof P4ChangeEntry) {
-				P4ChangeEntry entry = (P4ChangeEntry) objects.peek();
-				try {
-					if (qName.equalsIgnoreCase("file")) {
+				P4ChangeEntry entry = objects.peek();
+				if (qName.equalsIgnoreCase("file")) {
 
-						// URL decode depot path
-						String safePath = attributes.getValue("depot");
-						String depotPath = URLDecoder.decode(safePath, "UTF-8");
-						String a = attributes.getValue("action");
-						//Replacement of / is already done at this point. No need to call the FileAction.fromString(a);
-						FileAction action = FileAction.valueOf(a);
-						String strRev = attributes.getValue("endRevision");
+					// URL decode depot path
+					String safePath = attributes.getValue("depot");
+					String depotPath = URLDecoder.decode(safePath, StandardCharsets.UTF_8);
+					String a = attributes.getValue("action");
+					//Replacement of / is already done at this point. No need to call the FileAction.fromString(a);
+					FileAction action = FileAction.valueOf(a);
+					String strRev = attributes.getValue("endRevision");
 
-						P4AffectedFile file = new P4AffectedFile(depotPath, strRev, action);
-						entry.addAffectedFiles(file);
+					P4AffectedFile file = new P4AffectedFile(depotPath, strRev, action);
+					entry.addAffectedFiles(file);
 
-						///entry.files.add(temp);
-						text.setLength(0);
-						return;
-					}
+					///entry.files.add(temp);
+					text.setLength(0);
+					return;
+				}
 
-					if (qName.equalsIgnoreCase("job")) {
-						IFix temp = new Fix();
+				if (qName.equalsIgnoreCase("job")) {
+					IFix temp = new Fix();
 
-						String id = attributes.getValue("id");
-						temp.setJobId(id);
+					String id = attributes.getValue("id");
+					temp.setJobId(id);
 
-						String status = attributes.getValue("status");
-						temp.setStatus(status);
+					String status = attributes.getValue("status");
+					temp.setStatus(status);
 
-						entry.addJob(temp);
-						text.setLength(0);
-						return;
-					}
-				} catch (UnsupportedEncodingException e) {
-					entry = null;
+					entry.addJob(temp);
+					text.setLength(0);
+					return;
 				}
 			}
 
@@ -164,7 +155,7 @@ public class P4ChangeParser extends ChangeLogParser {
 		}
 
 		@Override
-		public void endElement(String uri, String localName, String qName) throws SAXException {
+		public void endElement(String uri, String localName, String qName) {
 
 			if (qName.equalsIgnoreCase("changelog")) {
 				// this is the root, so don't do anything
@@ -172,17 +163,17 @@ public class P4ChangeParser extends ChangeLogParser {
 			}
 
 			if (qName.equalsIgnoreCase("entry")) {
-				P4ChangeEntry entry = (P4ChangeEntry) objects.pop();
+				P4ChangeEntry entry = objects.pop();
 				changeEntries.add(entry);
 				return;
 			}
 
 			// if we are in the entry element
 			if (objects.peek() instanceof P4ChangeEntry) {
-				P4ChangeEntry entry = (P4ChangeEntry) objects.peek();
+				P4ChangeEntry entry = objects.peek();
 				try {
 
-					if (text.toString().trim().length() != 0
+					if (!text.toString().trim().isEmpty()
 							&& (qName.equalsIgnoreCase("changenumber")
 							|| qName.equalsIgnoreCase("label")
 							|| qName.equalsIgnoreCase("commit"))) {
@@ -260,7 +251,6 @@ public class P4ChangeParser extends ChangeLogParser {
 					}
 
 					text.setLength(0);
-					return;
 				} catch (Exception e) {
 					entry = null;
 				}
